# graphql-vss-server-libs

./: .gitignore  CMakeLists.txt  README.md
graphql_vss_server_libs/: CMakeLists.txt  graphql_vss_server_libs-config.cmake.in
graphql_vss_server_libs/protocol/: CMakeLists.txt  authorizer.hpp  dlt_helpers.hpp  dummyauthorizer.cpp  dummyauthorizer.hpp  exceptions.cpp  exceptions.hpp  graphqlconnection.cpp  graphqlconnection.hpp  graphqlconnectionoperation.cpp  graphqlconnectionoperation.hpp  graphqlrequesthandlers.cpp  graphqlrequesthandlers.hpp  graphqlrequeststate.cpp  graphqlrequeststate.hpp  graphqlserver.cpp  graphqlserver.hpp  jwtauthorizer.cpp  jwtauthorizer.hpp  messagetypes.hpp  response_helpers.hpp  subscriptiondefinitionnamevisitor.hpp
graphql_vss_server_libs/support/: CMakeLists.txt  commonapi-singletons.cpp  commonapi-singletons.hpp  debug.cpp  debug.hpp  demangle.hpp  dlt_helpers.hpp  log.cpp  log.hpp  permissions.cpp  permissions.hpp  scalars.cpp  scalars.hpp  singleton.cpp  singleton.hpp  spinlock.hpp  type_traits_extras.hpp
graphql_vss_server_libs/tests/: CMakeLists.txt  test_permissions.cpp  test_scalars.cpp  test_singletons.cpp
scripts/git/: install_git_hooks.sh  pre-commit  pre-push
